--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -2,13 +2,15 @@
     <div class="container mx-auto px-6 py-3 flex justify-between items-center">
       <div class="flex items-center">
         <!-- Logo -->
-        <img src="assets/logo2.jpg" alt="Logo" class="h-20 w-20" style="border-radius: 50%;">
+        <img src="assets/r2.jpg" alt="Logo" class="h-20 w-20" style="border-radius: 50%;">
         <!-- Navigation Links -->
         <div class="ml-10 flex space-x-8">
           <a routerLink="/home" class="text-gray-800 hover:text-indigo-600 font-medium">Home</a>
-          <a routerLink="/cataloge" class="text-gray-800 hover:text-indigo-600 font-medium">Catalogue</a>
+          <a routerLink="/films" class="text-gray-800 hover:text-indigo-600 font-medium">Films</a>
+          <a routerLink="/seances" class="text-gray-800 hover:text-indigo-600 font-medium">Seances</a>
           <a routerLink="/about" class="text-gray-800 hover:text-indigo-600 font-medium">About Us</a>
           <a routerLink="/contact" class="text-gray-800 hover:text-indigo-600 font-medium">Contact</a>
+          
         </div>
       </div>
   
