--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,7 @@
 @tailwind components;
 @tailwind utilities;
 
+/* @import 'node_modules/primeng/resources/themes/lara-light-indigo/theme.css';
+@import 'node_modules/primeng/resources/primeng.min.css';
+@import 'node_modules/primeicons/primeicons.css'; */
+
