salle component added

--- a/src/app/notfound/notfound.component.html
+++ b/src/app/notfound/notfound.component.html
@@ -2,7 +2,7 @@
     <!-- Left Section with 404 message and navigation links -->
     <div class="bg-white p-8 flex flex-col justify-between">
       <div>
-        <img src="assets/logo2.jpg" alt="Logo" class="h-8 mb-8 rounded-full w-24 h-24 object-cover">
+        <img src="assets/n3.jpg" alt="Logo" class="h-8 mb-8 rounded-full w-24 h-24 object-cover">
         <div class="text-4xl font-bold text-gray-800 mb-2">404</div>
         <h1 class="text-3xl font-bold text-gray-800 mb-4">Page not found</h1>
         <p class="text-gray-600">Sorry, we couldn't find the page you're looking for.</p>
