--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,32 +1,32 @@
 <nav class="bg-white shadow-md">
-    <div class="container mx-auto px-6 py-3 flex justify-between items-center">
-      <div class="flex items-center">
-        <!-- Logo -->
-        <img src="assets/r2.jpg" alt="Logo" class="h-20 w-20" style="border-radius: 50%;">
-        <!-- Navigation Links -->
-        <div class="ml-10 flex space-x-8">
-          <a routerLink="/home" class="text-gray-800 hover:text-indigo-600 font-medium">Home</a>
-          <a routerLink="/films" class="text-gray-800 hover:text-indigo-600 font-medium">Films</a>
-          <a routerLink="/seances" class="text-gray-800 hover:text-indigo-600 font-medium">Seances</a>
-          <a routerLink="/about" class="text-gray-800 hover:text-indigo-600 font-medium">About Us</a>
-          <a routerLink="/contact" class="text-gray-800 hover:text-indigo-600 font-medium">Contact</a>
-          
-        </div>
-      </div>
-  
-      <!-- Right-side Icons -->
-      <div class="flex items-center space-x-4">
-        <!-- Notification Bell -->
-        <button class="text-gray-500 hover:text-indigo-600">
-          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6 6 0 10-12 0v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m0 0v1a3 3 0 006 0v-1m-6 0h6"></path>
-          </svg>
-        </button>
-  
-        <!-- User Avatar -->
-        <p-avatar 
-    image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png" styleClass="mr-2" size="xlarge" shape="circle" />
+  <div class="container mx-auto px-6 py-3 flex justify-between items-center">
+    <div class="flex items-center">
+      <!-- Logo -->
+      <img src="assets/r2.jpg" alt="Logo" class="h-20 w-20" style="border-radius: 50%;">
+      <!-- Navigation Links -->
+      <div class="ml-10 flex space-x-8">
+        <a routerLink="/home" class="text-gray-800 hover:text-indigo-600 font-medium">Home</a>
+        <a routerLink="/films" class="text-gray-800 hover:text-indigo-600 font-medium">Films</a>
+        <a routerLink="/seances" class="text-gray-800 hover:text-indigo-600 font-medium">Seances</a>
+        <a routerLink="/salle" class="text-gray-800 hover:text-indigo-600 font-medium">Salle</a>
+        <a routerLink="/about" class="text-gray-800 hover:text-indigo-600 font-medium">About Us</a>
+        <a routerLink="/contact" class="text-gray-800 hover:text-indigo-600 font-medium">Contact</a>
+        
       </div>
     </div>
-  </nav>
-  
+
+    <!-- Right-side Icons -->
+    <div class="flex items-center space-x-4">
+      <!-- Notification Bell -->
+      <button class="text-gray-500 hover:text-indigo-600">
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6 6 0 10-12 0v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m0 0v1a3 3 0 006 0v-1m-6 0h6"></path>
+        </svg>
+      </button>
+
+      <!-- User Avatar -->
+      <p-avatar 
+  image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png" styleClass="mr-2" size="xlarge" shape="circle" />
+    </div>
+  </div>
+</nav>
