--- a/src/app/salle/salle.component.html
+++ b/src/app/salle/salle.component.html
@@ -47,7 +47,7 @@
             <th class="text-left px-6 py-3 border-b border-gray-200 font-semibold text-gray-700">Image</th>
             <th class="text-left px-6 py-3 border-b border-gray-200 font-semibold text-gray-700">ID</th>
             <th class="text-left px-6 py-3 border-b border-gray-200 font-semibold text-gray-700">Nom</th>
-            <th class="text-left px-6 py-3 border-b border-gray-200 font-semibold text-gray-700">ADDress</th>
+            <th class="text-left px-6 py-3 border-b border-gray-200 font-semibold text-gray-700">Adress</th>
             <th class="text-left px-6 py-3 border-b border-gray-200 font-semibold text-gray-700">CAPACITE</th>
 
             <th class="text-left px-6 py-3 border-b border-gray-200 font-semibold text-gray-700">Actions</th>
