--- a/src/app/salleprog/salleprog.component.html
+++ b/src/app/salleprog/salleprog.component.html
@@ -76,7 +76,7 @@
         <tbody>
             <tr *ngFor="let salle of salles" class="hover:bg-gray-50">
                 <td class="px-6 py-4 border-b border-gray-200">
-                  <img src="assets/R.jpg" alt="Film Image" class="w-16 h-16 rounded">
+                  <img src="assets/r6.jpg" alt="Film Image" class="w-16 h-16 rounded">
                 </td>
                 <td class="px-6 py-4 border-b border-gray-200">{{ salle.id_salleprog }}</td>
                 <td class="px-6 py-4 border-b border-gray-200">{{ salle.film.nom }}</td>
