--- a/src/app/salle/salle.component.html
+++ b/src/app/salle/salle.component.html
@@ -56,7 +56,7 @@
         <tbody>
             <tr *ngFor="let salle of salles" class="hover:bg-gray-50">
                 <td class="px-6 py-4 border-b border-gray-200">
-                  <img src="assets/R.jpg" alt="Film Image" class="w-16 h-16 rounded">
+                  <img src="assets/r7.jpg" alt="Film Image" class="w-16 h-16 rounded">
                 </td>
                 <td class="px-6 py-4 border-b border-gray-200">{{salle.id_salle}}</td>
                 <td class="px-6 py-4 border-b border-gray-200">{{salle.nom}}</td>
