--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -9,6 +9,7 @@
         <a routerLink="/films" class="text-gray-800 hover:text-indigo-600 font-medium">Films</a>
         <a routerLink="/seances" class="text-gray-800 hover:text-indigo-600 font-medium">Seances</a>
         <a routerLink="/salle" class="text-gray-800 hover:text-indigo-600 font-medium">Salle</a>
+        <a routerLink="/compte" class="text-gray-800 hover:text-indigo-600 font-medium">Compte</a>
         <a routerLink="/about" class="text-gray-800 hover:text-indigo-600 font-medium">About Us</a>
         <a routerLink="/contact" class="text-gray-800 hover:text-indigo-600 font-medium">Contact</a>
         
