--- a/src/app/compte/compte.component.html
+++ b/src/app/compte/compte.component.html
@@ -1,23 +1,41 @@
 <div class="p-6">
     <!-- Header avec bouton Ajouter -->
     <div class="flex justify-between items-center mb-4">
-      <h2 class="text-2xl font-bold">Salles</h2>
+      <h2 class="text-2xl font-bold">Comptes</h2>
       <p-dialog header="Add salle" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem' }">
-        <span class="p-text-secondary block mb-8">Add Salle.</span>
+        <span class="p-text-secondary block mb-8">Add Comptes.</span>
         <div class="flex flex-col gap-4 mb-4">
-          <div class="flex items-center gap-4">
-              <label for="username" class="font-semibold w-24">Salle Name</label>
-              <input pInputText id="username" class="flex-auto custom-outline" autocomplete="off" [(ngModel)]="salleName" />
+            <div class="flex items-center gap-4">
+              <label for="username" class="font-semibold w-24">Compte Name</label>
+              <input
+                pInputText
+                id="username"
+                class="flex-auto custom-outline"
+                autocomplete="off"
+                [(ngModel)]="compteName"
+              />
+            </div>
+            <div class="flex items-center gap-4">
+              <label for="password" class="font-semibold w-24">Password</label>
+              <div class="relative flex-auto">
+                <input
+                  [type]="isPasswordVisible ? 'text' : 'password'"
+                  id="password"
+                  class="flex-auto w-full custom-outline"
+                  autocomplete="off"
+                  [(ngModel)]="password"
+                />
+                <button
+                  type="button"
+                  (click)="togglePasswordVisibility()"
+                  class="absolute right-2 top-1/2 transform -translate-y-1/2 text-gray-600"
+                >
+                  <i [class]="isPasswordVisible ? 'pi pi-eye-slash' : 'pi pi-eye'"></i>
+                </button>
+              </div>
+            </div>
           </div>
-          <div class="flex items-center gap-4">
-              <label for="address" class="font-semibold w-24">Salle Addres</label>
-              <input pInputText id="address" class="flex-auto" autocomplete="off" [(ngModel)]="salleAddress" />
-          </div>
-          <div class="flex items-center gap-4">
-              <label for="capacity" class="font-semibold w-24">Salle Capacite</label>
-              <input pInputText id="capacity" class="flex-auto" autocomplete="off" [(ngModel)]="Sallecapacite" />
-          </div>
-      </div>
+          
       
         <div class="flex justify-end gap-2">
             <button 
@@ -27,7 +45,7 @@
               <i class="bx bx-x-circle"></i> Cancel
             </button>
             <button 
-              (click)="addSalle(salleName,salleAddress,Sallecapacite)" 
+              (click)="addCompte(compteName,password)" 
               class="bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700 transition flex items-center gap-2"
             >
               <i class="bx bx-save"></i> Save
@@ -35,7 +53,7 @@
           </div>
     </p-dialog>
     <button (click)="showDialog()" class="bg-indigo-600 text-white px-4 py-2 rounded hover:bg-green-600 transition flex items-center">
-        <i class="bx bx-plus mr-2"></i> Add Salle
+        <i class="bx bx-plus mr-2"></i> Add Compte
     </button>
     </div>
   
@@ -47,22 +65,18 @@
             <th class="text-left px-6 py-3 border-b border-gray-200 font-semibold text-gray-700">Image</th>
             <th class="text-left px-6 py-3 border-b border-gray-200 font-semibold text-gray-700">ID</th>
             <th class="text-left px-6 py-3 border-b border-gray-200 font-semibold text-gray-700">Nom</th>
-            <th class="text-left px-6 py-3 border-b border-gray-200 font-semibold text-gray-700">ADDress</th>
-            <th class="text-left px-6 py-3 border-b border-gray-200 font-semibold text-gray-700">CAPACITE</th>
-
+            <th class="text-left px-6 py-3 border-b border-gray-200 font-semibold text-gray-700">solde</th>
             <th class="text-left px-6 py-3 border-b border-gray-200 font-semibold text-gray-700">Actions</th>
           </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let salle of salles" class="hover:bg-gray-50">
+            <tr *ngFor="let compte of comptes" class="hover:bg-gray-50">
                 <td class="px-6 py-4 border-b border-gray-200">
                   <img src="assets/R.jpg" alt="Film Image" class="w-16 h-16 rounded">
                 </td>
-                <td class="px-6 py-4 border-b border-gray-200">{{salle.id_salle}}</td>
-                <td class="px-6 py-4 border-b border-gray-200">{{salle.nom}}</td>
-                <td class="px-6 py-4 border-b border-gray-200">{{salle.adresse}}</td>
-                <td class="px-6 py-4 border-b border-gray-200">{{salle.capacite}}</td>
-
+                <td class="px-6 py-4 border-b border-gray-200">{{compte.id}}</td>
+                <td class="px-6 py-4 border-b border-gray-200">{{compte.name}}</td>
+                <td class="px-6 py-4 border-b border-gray-200">{{compte.solde}}</td>
 
                 <td class="px-6 py-4 border-b border-gray-200">
                     <!-- Buttons aligned horizontally -->
@@ -73,23 +87,30 @@
                         <i class="bx bx-edit mr-2"></i> Edit
                       </button>
                       <p-dialog header="Update Salle" [modal]="true" [(visible)]="editvisible" [style]="{ width: '25rem' }">
-                        <span class="p-text-secondary block mb-8">Update salle.</span>
-                        <!-- <div class="flex items-center gap-4 mb-4">
-                            <label for="username" class="font-semibold w-24">Salle Name</label>
-                            <input pInputText id="username" class="flex-auto" autocomplete="off"  [(ngModel)]="salle.nom"/>
-                        </div> -->
+                        <span class="p-text-secondary block mb-8">Update compte.</span>
                         <div class="flex flex-col gap-4 mb-4">
                           <div class="flex items-center gap-4">
-                              <label for="username" class="font-semibold w-24">Salle Name</label>
-                              <input pInputText id="username" class="flex-auto custom-outline" autocomplete="off" [(ngModel)]="salle.nom" />
+                              <label for="username" class="font-semibold w-24">Compte nom</label>
+                              <input pInputText id="username" class="flex-auto custom-outline" autocomplete="off" [(ngModel)]="compte.name"/>
                           </div>
                           <div class="flex items-center gap-4">
-                              <label for="address" class="font-semibold w-24">Salle Addres</label>
-                              <input pInputText id="address" class="flex-auto" autocomplete="off" [(ngModel)]="salle.adresse" />
-                          </div>
-                          <div class="flex items-center gap-4">
-                              <label for="capacity" class="font-semibold w-24">Salle Capacite</label>
-                              <input pInputText id="capacity" class="flex-auto" autocomplete="off" [(ngModel)]="salle.capacite" />
+                            <label for="password" class="font-semibold w-24">Password</label>
+                            <div class="relative flex-auto">
+                              <input
+                                [type]="isPasswordVisible ? 'text' : 'password'"
+                                id="password"
+                                class="flex-auto w-full custom-outline"
+                                autocomplete="off"
+                                [(ngModel)]="compte.password"
+                              />
+                              <button
+                                type="button"
+                                (click)="togglePasswordVisibility()"
+                                class="absolute right-2 top-1/2 transform -translate-y-1/2 text-gray-600"
+                              >
+                                <i [class]="isPasswordVisible ? 'pi pi-eye-slash' : 'pi pi-eye'"></i>
+                              </button>
+                            </div>
                           </div>
                         </div>
                         
@@ -101,11 +122,12 @@
                               <i class="bx bx-x-circle"></i> Cancel
                             </button>
                             <button 
-                              (click)="updateSalle(salle)" 
+                              (click)="updateCompte(compte)" 
                               class="bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700 transition flex items-center gap-2"
                             >
                               <i class="bx bx-save"></i> Update
                             </button>
+                            
                         </div>
                       </p-dialog>
                       </div>
@@ -113,10 +135,18 @@
                         <div class="flex items-center gap-2">
                             <span><p-toast></p-toast>
                             <p-confirmPopup></p-confirmPopup>
-                            <button (click)="confirm2($event,salle.id_salle)"  class="bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700 transition flex items-center">
+                            <button (click)="confirm2($event,compte.id)"  class="bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700 transition flex items-center">
                                 <i class="bx bx-trash mr-2"></i> Delete
                             </button></span>
                         </div>
+                        <!-- Delete Button -->
+                        <div class="flex items-center gap-2">
+                          <span><p-toast></p-toast>
+                          <p-confirmPopup></p-confirmPopup>
+                          <button (click)="confirm2($event,compte.id)"  class="bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700 transition flex items-center">
+                              <i class="bx bx-trash mr-2"></i> Debiter argent
+                          </button></span>
+                      </div>
                       
                     </div>
                 </td>
