--- a/src/app/seance/seance.component.html
+++ b/src/app/seance/seance.component.html
@@ -2,7 +2,7 @@
   <!-- Header avec bouton Ajouter -->
   <div class="flex justify-between items-center mb-4">
     <h2 class="text-2xl font-bold">Salleprog</h2>
-    <p-dialog header="Add salleprog" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem' }">
+    <!--<p-dialog header="Add salleprog" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem' }">
       <span class="p-text-secondary block mb-8">Add Seance</span>
       <div class="flex items-center gap-4 mb-4">
           <div>
@@ -55,7 +55,7 @@
             <i class="bx bx-save"></i> Save
           </button>
         </div>
-  </p-dialog>
+  </p-dialog>-->
   <button (click)="showDialog()" class="bg-indigo-600 text-white px-4 py-2 rounded hover:bg-green-600 transition flex items-center">
       <i class="bx bx-plus mr-2"></i> Add Seance
   </button>
