--- a/src/app/reserver/reserver.component.html
+++ b/src/app/reserver/reserver.component.html
@@ -102,7 +102,7 @@
         </button>
         <button (click)="reserveMovie()"
             class="bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700 transition flex items-center gap-2">
-            <i class="bx bx-save"></i> Debiter
+            <i class="bx bx-save"></i> RESERVER
         </button>
 
     </div>
